2000-08-11  Ettore Perazzoli  <ettore@helixcode.com>

	* mime-type-capplet/Makefile.am (INCLUDES): Add `$(top_srcdir)' so
	that we don't wrongly #include existing installed headers.

2000-08-11  Pavel Cisler  <pavel@eazel.com>

	* HACKING:
	* NEWS:
	* configure.in:
	* data/mime/gnome-vfs.keys:
	* test/Makefile.am:
	Prepare for release.
	Merge over mime entries for gnumeric.
	Fix makefile breakage in devel-docs and test.

2000-08-10  J Shane Culpepper  <pepper@eazel.com>

	* data/mime/gnome-vfs.keys:  Rolling fix for Bug # 2104 into branch

2000-08-10  Maciej Stachowiak  <mjs@eazel.com>

	* libgnomevfs/gnome-vfs-uri.c (parse_uri_substring,
	gnome_vfs_uri_new): Tolerate fragment identifiers by just ignoring
	them; differentiate them from the gnome-vfs method chaning syntax
	by checking for a colon past the pound sign.

2000-08-08  J Shane Culpepper  <pepper@eazel.com>

	* modules/http-method.c: (process_propfind_response),
	(make_propfind_request):

		Adding major dav stability fixes to the branch.

2000-08-07  Maciej Stachowiak  <mjs@eazel.com>

	* CVSVERSION: New file, used to detect whether we are configuring
	a cvs version or a release tarball.
	
	* configure.in: Default -Werror to off when configuring a release
	tarball, and to on when configuring a cvs version.

2000-08-07  Maciej Stachowiak  <mjs@eazel.com>

	* test/test-escape.c (main): Fix to match new escaping logic for
	paths.

2000-08-07  Darin Adler  <darin@eazel.com>

	* libgnomevfs/gnome-vfs-uri.c: (gnome_vfs_uri_has_parent):
	Fixed so it matches the _get_parent function by just calling
	_get_parent. It would be hard to get the corresponding result
	otherwise. Someone performance-obsessed could move the common
	code out into a separate function if they like.
	
	* test/test-uri.c: (test_uri_has_parent), (main):
	Added a test of gnome_vfs_uri_has_parent to this tool.
	
	* modules/http-method.c: (make_propfind_request):
	Changed a g_warning to a g_message. Maybe yakk will change it