@@ -1,3 +1,8 @@
+2000-08-13  Pavel Cisler  <pavel@eazel.com>
+
+	* modules/Makefile.am:
+	Fix a problem where make dist would skip two source files.
+
 2000-08-11  Ettore Perazzoli  <ettore@helixcode.com>
 
 	* mime-type-capplet/Makefile.am (INCLUDES): Add `$(top_srcdir)' so
